tests/parser/valid/if_statements.src
fn main() {
    int x = 10;
    
    // Простой if
    if (x > 0) {
        x = 1;
    }
    
    // if-else
    if (x > 5) {
        x = 2;
    } else {
        x = 3;
    }
    
    // if-else if
    if (x == 1) {
        x = 4;
    } else if (x == 2) {
        x = 5;
    } else {
        x = 6;
    }
    
    // Вложенные if
    if (x > 0) {
        if (x < 10) {
            if (x != 5) {
                x = 7;
            }
        }
    }
    
    return x;
}