tests/parser/invalid/mismatched_braces.src
fn main() {
    if (x > 0) {
        return 1;
    ]  // Ошибка: несоответствие скобок
}